# metr4810-team5-project

./: .gitignore  README.md  keypress_repeat_settings.sh
atmega328/: METR4810.atsln  UART.c  UART.h  driveMotor.c  driveMotor.h  main.c  serialio.c  serialio.h  servoControl.c  servoControl.h  timer2.c  timer2.h
atmega328/edens_drivers/: cpu_clock.h  serialio.c  serialio.h  servo_pwm.c  servo_pwm.h  spi.c  spi.h  twi.c  twi.h
atmega328/minerover/: minerover.atsln
atmega328/minerover/minerover/: config.h  main.c  minerover.cproj  motor.c  motor.h  servo.c  servo.h  time.c  time.h  uart.c  uart.h
atmega328/minerover/minerover/Debug/: Makefile  main.d  makedep.mk  minerover.lss  minerover.map  minerover.srec  motor.d  servo.d  time.d  uart.d
gui/cpp/qt/build-qt-gui-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  qt-gui
gui/cpp/qt/build-test-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  moc_display.cpp  test
gui/cpp/qt/ftdi_ui/: ftdi_ui.pro  mainwindow.cpp  mainwindow.h
gui/cpp/qt/qt-gui/: main.cpp  mainwindow.cpp  mainwindow.hpp  qt-gui.pro
gui/cpp/qt/test/: display.cpp  display.h  main.cpp  test.pro  (+1 more)
gui/cpp/test/: Makefile  main.c
gui/python/: main.py  serial_receiver.py
gui/qt/build-ftdi_ui-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile
pizero/: install_opencv_cmake.sh  nmdisp.sh  test.cpp
pizero/basestation/: Makefile  main.cpp
pizero/lib/: lib_template.cpp  lib_template.hpp
pizero/rescuedrone/: Makefile  main.cpp
pizero/test/: CMakeLists.txt  Client.cpp  Makefile  Server.cpp  client  config.h  server  test.cpp
