cmake_minimum_required(VERSION 2.8)
find_package( OpenCV REQUIRED )
add_executable( server.exe Server.cpp PracticalSocket.cpp )
target_link_libraries( server.exe ${OpenCV_LIBS} )
add_executable( client.exe Client.cpp PracticalSocket.cpp )
target_link_libraries( client.exe ${OpenCV_LIBS} )
add_executable( test.exe test.cpp )
target_link_libraries( test.exe ${OpenCV_LIBS} )